made a note of how to produce PDF files

--- a/README.adoc
+++ b/README.adoc
@@ -13,3 +13,9 @@ While there are many ways to use AsciiDoc, I prefer a WYSIWYG style when I can g
 . install AsciiDoc plug-in in IntelliJ
 . git clone git@github.com:timborn/hamster-handbook.git
 
+To produce PDFs, you can use the "PDF" icon in IntelliJ or, from the command line:
+
+----
+$ brew install asciidoctor  # if necessary
+$ asciidoctor-pdf foo.adoc
+----
